samples/_failures_safe/1761163420_dd3dc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6ba8dc6.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f6ba8dc6.c:162:16: error: missing terminating " character
  162 |         printf("%s
      |                ^~~
./samples/SAFE/__tmp_f6ba8dc6.c:162:9: error: expected expression at end of input
  162 |         printf("%s
      |         ^~~~~~
./samples/SAFE/__tmp_f6ba8dc6.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6ba8dc6.c:162:9: error: expected declaration or statement at end of input
